# NovaEngine

./: BUILD_INSTRUCTIONS.md  CMakeLists.txt  PORT_REUSE_FIX.md  README.txt  SOLUTION_SUMMARY.md
include/: decode_and_display.hpp  erasure_coder.hpp  ffmpeg_encoder.h  network_monitor.hpp  scheduler.hpp  sender_receiver.hpp  slicer.hpp  smart_collector.hpp  udp_sender.hpp
src/: chunk_dispatcher.cpp  decode_and_display.cpp  erasure_coder.cpp  ffmpeg_encoder.cpp  main.cpp  network_monitor.cpp  scheduler.cpp  sender_receiver.cpp  slicer.cpp  smart_collector.cpp  udp_sender.cpp  udp_sender.hpp
src/common/: concurrent_queue.h  logger.cpp  logger.h
src/core/: engine.cpp
src/media/: erasure_coder.cpp  erasure_coder.h  ffmpeg_encoder.cpp  ffmpeg_encoder.h  slicer.cpp
src/network/: path_monitor.cpp  path_monitor.h  scheduler.cpp  scheduler.h  sender_receiver.cpp
src/transport/: smart_collector.cpp
